# pulumi-lab

./: .dir-locals.el  .envrc  .gitignore  .gitmodules  FREEBSD_WORKING_SETUP.md  Makefile  README.md  README.org  pulumi-lab.el  pyproject.toml  test-minio-pulumi.py
.github/workflows/: ci.yml
containers/: README.org
containers/nginx/: Dockerfile  Makefile  index.html  style.css
docs/: DOCKER_FREEBSD_ISSUE.md  FREEBSD.md  FREEBSD.org  FREEBSD_COMPATIBILITY.md  FREEBSD_PULUMI_SETUP.md  FREEBSD_PULUMI_SETUP.org  FREEBSD_SUCCESS.md  INSTALLATION.md  INSTALLATION.org  LOCALSTACK_FREEBSD.md  MINIO_ALTERNATIVE.md  MINIO_ALTERNATIVE.org  README-publishing.org  hy-tutorial.org
experiments/: EXPERIMENTS.org
experiments/000-basics-hy/: Makefile  README.org  __main__.hy
experiments/001-github-provider/: .direnvrc  .env.example  .gitignore  Makefile  Pulumi.yaml  README.org  __main__.hy  index.ts  package.json
experiments/002-github-teams/: Pulumi.yaml  index.py
experiments/002-github-teams-hy/: Makefile  Pulumi.yaml  README.org  __main__.hy
experiments/003-aws-ec2-hy/: Pulumi.yaml  README.org  __main__.hy
experiments/004-gh-cli-vs-pulumi/: .gitignore  Makefile  Pulumi.yaml  README.org  __main__.hy  __main__.py
experiments/004-stack-references-hy/: Pulumi.yaml  __main__.hy
experiments/005-cicd-github-audit/: .gitignore  Makefile  Pulumi.yaml  README.org  audit_repos.py  requirements.txt  test_pulumi.py
experiments/005-dynamic-providers-hy/: Pulumi.yaml  __main__.hy
experiments/006-s3-buckets-hy/: Makefile  Pulumi.yaml  __main__.hy  test_s3.hy
experiments/007-component-resources-hy/: Pulumi.yaml  __main__.hy
experiments/008-github-full-hy/: Makefile  Pulumi.yaml  __main__.hy
experiments/009-aws-vpc-hy/: Pulumi.yaml  __main__.hy
experiments/010-lambda-api-hy/: Pulumi.yaml  README.org  __main__.hy
experiments/011-policy-pack-hy/: Pulumi.yaml  __main__.hy
experiments/012-custom-provider-hy/: .gitignore  Pulumi.yaml  __main__.hy
experiments/013-multi-stack-hy/: Pulumi.yaml  __main__.hy
experiments/014-disaster-recovery-hy/: Pulumi.yaml  __main__.hy
experiments/015-project-config-hy/: Pulumi.yaml  __main__.hy
experiments/016-resource-names-hy/: Pulumi.yaml  __main__.hy
experiments/017-providers-localstack-hy/: Pulumi.yaml  __main__.hy
experiments/018-honeycomb-observability-hy/: Pulumi.yaml  __main__.hy
experiments/019-dynamic-providers-advanced-hy/: Pulumi.yaml  __main__.hy
experiments/020-resource-options-hy/: Pulumi.yaml  __main__.hy
experiments/021-provider-functions-audit-hy/: Pulumi.yaml  __main__.hy
experiments/022-inputs-outputs-secrets-hy/: Pulumi.yaml  __main__.hy
experiments/023-apply-transformations-hy/: Pulumi.yaml  __main__.hy
experiments/024-config-management-hy/: Pulumi.yaml  __main__.hy
experiments/025-academic-components-hy/: Pulumi.yaml  __main__.hy
experiments/026-ssm-secrets-localstack-hy/: Pulumi.yaml  README.org  __main__.hy
experiments/027-package-creation-hy/: mock-examples.hy
experiments/028-go-provider-pets/: __main__.go  go.mod
experiments/029-python-blocking-async-hy/: __main__.py
experiments/031-automation-api-hy/: __main__.hy  (+4 more)
notes/: aws-localstack-reference.org  iac-comparison-and-reading-list.org  pulumi-architecture.md  state-and-backends.org
research/: README.md  README.org
resources/: hy-syntax.html  hy-tutorial.html
scripts/: README-publishing.md  check-localstack.hy  publish-readme.el  publish-readme.py  publish-readme.sh  pulumi-tmux.sh  setup-docker-freebsd.sh  start-localstack.sh  start-minio.sh  test-aws-cli.sh  test-github-api.hy  test-pulumi-freebsd.sh  test-s3-localstack.hy
(+22 files in other folders)
