# Pulumi Lab - Experimental Infrastructure as Code with Hy
# Python 3.11 + Hy 1.0.0 + FreeBSD 14.3-RELEASE

[project]
name = "pulumi-lab"
version = "0.1.0"
description = "🧪 EXPERIMENTAL Pulumi Infrastructure as Code with Hy"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-github>=6.0.0", 
    "pulumi-aws>=6.0.0",
    "hy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]
automation = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "click>=8.0.0",
    "requests>=2.30.0",
    "pydantic>=2.0.0",
]
policy = [
    "pulumi-policy>=1.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "B", "C"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true