# Pulumi Lab - Experimental Infrastructure as Code with Hy
# Python 3.11 + Hy 1.0.0 + FreeBSD 14.3-RELEASE

[project]
name = "pulumi-lab"
version = "0.1.0"
description = "Experimental Pulumi Infrastructure as Code with Hy"
requires-python = ">=3.11"
dependencies = [
    "hy>=1.0.0",
]

[project.optional-dependencies]
pulumi = [
    "pulumi>=3.0.0",
    "pulumi-github>=6.0.0",
    "pulumi-aws>=6.0.0",
]
aws = [
    "boto3>=1.40.14",
    "awscli>=1.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["*.hy", "*.org", "*.yaml", "*.yml"]